update collage image

--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ a.heroCta,
 
 .servicesTitle {
   margin: 0 0 18px;
-  color: var(--paper]);
+  color: var(--paper);
   font-weight: 900;
   font-size: 38px;
 }
