update layout + button

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
 
 /* TEXTO SECUNDÁRIO (maior) */
 .whiteSub {
-  margin: 0;
+  margin-top: -4px;
   font-size: 16px;
   line-height: 1.7;
   font-weight: 500;
