--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
 /* fundo azul */
 .heroContent {
   flex: 1;
-  color: var(--white);
+  color: var(--paper);
 
   background-color: var(--blue);
   background-image: url("assets/images/hero.png");
@@ -147,7 +147,7 @@ body {
   height: 54px;
   border-radius: 50%;
 
-  background: var(--white);
+  background: var(--paper);
   color: var(--blue);
 
   border: none;
@@ -227,7 +227,7 @@ body {
   font-size: 14.5px;
   font-weight: 800;
 
-  color: var(--white);
+  color: var(--paper);
   background: var(--blue);
   border-radius: 999px;
   text-decoration: none;
@@ -247,7 +247,7 @@ body {
 }
 
 .servicesMainTitle {
-  color: var(--white);
+  color: var(--paper);
   font-weight: 600;
   font-size: 25px;
   line-height: 1.05;
@@ -256,7 +256,7 @@ body {
 }
 
 .serviceCard {
-  background: var(--white);
+  background: var(--paper);
   border-radius: 22px;
   padding: 30px 28px;
   margin: 0 0 18px; /* reduzido de 26px */
@@ -363,7 +363,7 @@ body {
   border-radius: 50%;
 
   background: var(--blue);
-  color: var(--white);
+  color: var(--paper);
 
   border: none;
   cursor: pointer;
@@ -404,7 +404,7 @@ html { scroll-behavior: smooth; }
 .footerSection{
   /* gradiente igual ao print */
   background: var(--blue);
-  color: var(--white);
+  color: var(--paper);
 }
 
 .footerInner{
