--- a/style.css
+++ b/style.css
@@ -700,6 +700,8 @@ html { scroll-behavior: smooth; }
   margin: 18px 0 0;
   font-size: 6px;
   font-weight: 500;
+  justify-content: center;
+  align-items: center;
 }
 
 /* MOBILE */
