--- a/style.css
+++ b/style.css
@@ -696,10 +696,12 @@ html { scroll-behavior: smooth; }
   padding: 0 9999px;
 }
 
-.footerCopy{
+.footerCopy {
   margin: 18px 0 0;
   font-size: 8px;
   font-weight: 500;
+  text-align: center;
+  width: 100%;
 }
 
 /* MOBILE */
