--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ body {
   font-size: 15px;
   font-weight: 500;
   line-height: 1.05;
-  text-align: left;
+  text-align: center;
   color: #fff;
   padding: 5px 50px;
   margin-bottom: 30px;
